<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddEventActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/setAllInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/setTitleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.166"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/setTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/setLocationLayout"
                    android:layout_width="255dp"
                    android:layout_height="63dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/setTitleLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/setLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/setDetailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.166"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/setLocationLayout"
                    app:layout_constraintVertical_bias="0.0">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/setDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/detail" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/PlacePickerBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/use_map"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.76"
                    app:layout_constraintStart_toEndOf="@+id/setLocationLayout"
                    app:layout_constraintTop_toTopOf="@+id/setLocationLayout" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="226dp"
                android:background="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

                <EditText
                    android:id="@+id/setStartDate"
                    android:layout_width="160dp"
                    android:layout_height="63dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/select_event_start_date"
                    android:inputType="date"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/setEndDate"
                    android:layout_width="160dp"
                    android:layout_height="63dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/select_event_end_date"
                    android:inputType="date"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/setStartDate"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/setStartTime"
                    android:layout_width="160dp"
                    android:layout_height="63dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/select_event_start_time"
                    android:inputType="time"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/setStartDate" />

                <EditText
                    android:id="@+id/setEndTime"
                    android:layout_width="160dp"
                    android:layout_height="63dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/select_event_end_time"
                    android:inputType="time"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/setStartTime"
                    app:layout_constraintTop_toBottomOf="@+id/setEndDate" />

                <EditText
                    android:id="@+id/setAlertDate"
                    android:layout_width="160dp"
                    android:layout_height="63dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/select_event_alert_date"
                    android:inputType="date"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/setStartTime"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/setAlertTime"
                    android:layout_width="160dp"
                    android:layout_height="63dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/select_event_alert_time"
                    android:inputType="time"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/setAlertDate"
                    app:layout_constraintTop_toBottomOf="@+id/setEndTime"
                    app:layout_constraintVertical_bias="0.111" />
            </android.support.constraint.ConstraintLayout>


            <Button
                android:id="@+id/submitAddEvent"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/add_event"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
                app:layout_constraintVertical_bias="0.0" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>