<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kmitl.final_project.sirichai.eventontheday.view.MainActivity">

    <item
        android:id="@+id/addEvent"
        android:orderInCategory="100"
        android:title="@string/addevent"
        app:showAsAction="never"
        android:onClick="onClickAddEventListenet"/>
    <item
        android:id="@+id/addPreset"
        android:orderInCategory="100"
        android:title="@string/addpreset"
        app:showAsAction="never"
        android:onClick="onClickAddPresetListenet"/>
</menu>
